--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   ],
   "scripts": {
     "build": "babel src --out-dir bin && chmod +x ./bin/release.js",
-    "test": "exit 0"
+    "test": "exit 0",
+    "patch": "bin/release.js patch",
+    "minor": "bin/release.js minor",
+    "major": "bin/release.js major"
   },
   "repository": {
     "type": "git",
