Add linting and cleaning 'bin' up before transpiling to it

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "bin"
   ],
   "scripts": {
-    "build": "babel src --out-dir bin && chmod +x ./bin/release.js",
-    "test": "exit 0",
+    "build": "rm -rf lib && babel src --out-dir bin && chmod +x ./bin/release.js",
+    "lint": "eslint .",
+    "test": "npm run lint",
     "patch": "bin/release.js patch",
     "minor": "bin/release.js minor",
     "major": "bin/release.js major"
