--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "extends": ["defaults"],
   "env": {
     "node": true
   },
@@ -7,6 +8,7 @@
     "comma-spacing": 2,
     "comma-style": [2, "last"],
     "one-var": [2, { "initialized": "never" }],
+    "no-console": 0,
     "no-unused-vars": [2, { "vars": "all", "args": "none" }],
     "no-var": 2,
     "quotes": [2, "single", "avoid-escape"],
