--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel": "^5.6.14",
     "babel-eslint": "^4.0.5",
     "eslint": "^1.0.0",
+    "eslint-config-defaults": "^3.1.0",
     "mt-changelog": "^0.6.1"
   },
   "dependencies": {
