--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,18 @@
 {
-  "extends": ["defaults"],
+  "extends": ["eslint-config-airbnb"],
   "env": {
     "node": true
   },
   "parser": "babel-eslint",
   "rules": {
-    "comma-spacing": 2,
-    "comma-style": [2, "last"],
+    "comma-dangle": 0,
+    "func-names": 0,
+    "guard-for-in": 0,
     "one-var": [2, { "initialized": "never" }],
     "no-console": 0,
-    "no-unused-vars": [2, { "vars": "all", "args": "none" }],
-    "no-var": 2,
-    "quotes": [2, "single", "avoid-escape"],
-    "strict": 0
+    "no-eq-null": 0,
+    "no-param-reassign": 0,
+    "no-undef": 2,
+    "no-use-before-define": 0
   }
 }
