--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bin"
   ],
   "scripts": {
-    "build": "rm -rf lib && babel src --out-dir bin && chmod +x ./bin/release.js",
+    "build": "rm -rf bin && babel src --out-dir bin && chmod +x ./bin/release.js",
     "lint": "eslint .",
     "test": "npm run lint",
     "patch": "bin/release.js patch --run",
@@ -38,8 +38,9 @@
   },
   "homepage": "https://github.com/AlexKVal/release-script#readme",
   "devDependencies": {
-    "babel": "^5.6.14",
+    "babel-cli": "^6.0.15",
     "babel-eslint": "^4.0.5",
+    "babel-preset-es2015": "^6.0.15",
     "eslint": "^1.0.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.3.2",
