--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "func-names": 0,
     "guard-for-in": 0,
     "one-var": [2, { "initialized": "never" }],
+    "max-len": 0,
     "no-console": 0,
     "no-eq-null": 0,
     "no-param-reassign": 0,
